<resources>
	<string name="app_name">Tema</string>
	<string name="scrollViewInfo">ScrollView: A view group that allows the view hierarchy placed within it to be scrolled. Scroll view may have only one direct child placed within it. To add multiple views within the scroll view, make the direct child you add a view group, for example LinearLayout, and place additional views within that LinearLayout.</string>
	<string name="spinner_example">Spinner Example</string>
	<string name="title">Android Developer Fundamentals</string>
	<string name="login">LOGIN</string>
	<string name="email">Email</string>
	<string name="phone">Phone</string>
	<string name="i_accept_t_amp_c"><![CDATA[I accept T&C]]></string>
	<string name="submit">SUBMIT</string>
	<string name="error_fill_mail">Fill in the email address</string>
	<string name="error_fill_phone">Fill in phone number</string>
	<string name="error_validate_mail">Fill the input with a valid email address</string>
	<string name="error_validate_phone">Fill the input with a valid phone number</string>
</resources>
