<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
	android:padding="@dimen/s"
	tools:context=".LoginActivity">

	<TextView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/login"
		android:textColor="@color/redLight"
		android:textSize="@dimen/s"
		android:textStyle="bold"
		/>

	<EditText
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:inputType="textEmailAddress"
		android:hint="@string/email"
		android:id="@+id/emailAddressEditText"
		android:autofillHints="user@example.com" />

	<EditText
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:inputType="phone"
		android:hint="@string/phone"
		android:id="@+id/phoneEditText"
		android:autofillHints="0722xxxxxx" />
	<CheckBox
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/i_accept_t_amp_c"
		android:id="@+id/termsCheckbox"/>
	<Button
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
        android:text="@string/submit"
		android:onClick="loginOnClick"
		android:background="@color/colorPrimary"/>

	<TextView
		android:id="@+id/submittedValues"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text=""
		/>

</LinearLayout>
